WIP: TM details modal

--- a/server/zanata-frontend/src/editor/app/app.css
+++ b/server/zanata-frontend/src/editor/app/app.css
@@ -47,6 +47,12 @@
 @import './css/theme/index.css';
 
 
+/**
+ * Bootstrap
+ */
+@import './css/variables.less';
+@import './css/style.less';
+
 /* Fix for hotkeys, remove this when reimplemented */
 
 .fade {
