--- a/server/zanata-frontend/src/frontend/app/styles/style.less
+++ b/server/zanata-frontend/src/frontend/app/styles/style.less
@@ -42,7 +42,7 @@ body {
   width: 100%;
   margin-top: 0.6em;
   margin-bottom: 1em;
-  margin-left: 0.6em;
+  margin-left: 0.1em;
 }
 
 .scrollViewTheme {
@@ -50,7 +50,9 @@ body {
   overflow: hidden;
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
-  margin-left: 2em;
+  max-width:48em;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .contentViewContainer {
@@ -61,6 +63,11 @@ body {
   margin-left: 1em;
 }
 
+
+#explore .contentViewContainer svg {
+  height:2em;
+  margin-right: 0.2em;
+}
 .container:focus {
   outline:0;
 }
@@ -4849,9 +4856,10 @@ button.btn-link {
   font-size: 1.2em;
   font-style: inherit;
   outline: none;
-  padding-left: 2.03125em;
+  padding-left: 1.3em;
   padding-right: 0.375em;
   width: 50%;
+  margin-left: -1.2em;
 }
 
 .textInput .placeholder {
