--- a/server/zanata-frontend/src/editor/app/app.css
+++ b/server/zanata-frontend/src/editor/app/app.css
@@ -50,8 +50,8 @@
 /**
  * Bootstrap
  */
-@import './css/variables.less';
-@import './css/style.less';
+@import './css/less/variables.less';
+@import './css/less/style.less';
 
 /* Fix for hotkeys, remove this when reimplemented */
 
