WIP: TM details modal styling

--- a/server/zanata-frontend/src/editor/app/css/less/style.less
+++ b/server/zanata-frontend/src/editor/app/css/less/style.less
@@ -945,7 +945,7 @@ h6 small {
 h1,
 h2,
 h3 {
-  margin-top: 1.429em;
+  margin-top: 0.714em;
   margin-bottom: 0.714em;
   color: @brand-secondary;
 }
@@ -988,6 +988,7 @@ h5 small,
 h6 .small,
 h6 small {
   font-size: 75%;
+  color:#777;
 }
 
 .h1,
@@ -3881,7 +3882,8 @@ button.list-group-item {
 }
 
 a.list-group-item .list-group-item-heading,
-button.list-group-item .list-group-item-heading {
+button.list-group-item .list-group-item-heading,
+.list-group-item-heading {
   color: #333;
 }
 
@@ -3977,6 +3979,10 @@ button.list-group-item {
   padding: @padding-large-vertical;
   color: @brand-primary;
   font-size: 1em;
+}
+
+.panel-body h3 {
+  margin-top:0;
 }
 
 .panel-title {
