WIP: TM details modal styling

--- a/server/zanata-frontend/src/editor/app/css/less/style.less
+++ b/server/zanata-frontend/src/editor/app/css/less/style.less
@@ -3990,6 +3990,7 @@ button.list-group-item {
   margin-bottom: 0;
   color: inherit;
   font-size: 1.143em;
+  padding-bottom:0
 }
 
 .panel.panel-side {
