--- a/server/zanata-frontend/src/editor/app/css/less/variables.less
+++ b/server/zanata-frontend/src/editor/app/css/less/variables.less
@@ -15,11 +15,11 @@
 @brand-secondary:       #03A6D7;
 @brand-primary:         #546677;
 @brand-success:         #62c876;
-@brand-info:            #029ACF;
+@brand-info:            #00A5D9;
 @brand-warning:         #ffa800;
 @brand-danger:          #ff3b3d;
 @brand-unsure:          #E9DD00;
-@brand-muted:           #A2B3BE;
+@brand-muted:           #BBD4DD;
 
 
 //== Progress bars
